refactor: retorna clientId no response para possibilidar validação da sessão após cadastro